# smart-assistant

./: .gitignore  README.md  data.csv  pyproject.toml  structured_data.db
src/: app.py  assistant_2.py  graph.py  indexer.py  logger.py  search_engine.py  structured_data_simulator.py  tools.py  worldbank_data.csv
src/faiss_index/: index.faiss  index.pkl
src/misc/: assistant_2.py  search_engine.py
vectorstore/index/: index.faiss  index.pkl
