[project]
name = "smart-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.26",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "streamlit>=1.47.0",
    "fastapi>=0.100.0",
    "langchain-community>=0.3.27",
]
